--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>JS Lib</title>
+    <title>Speedy JS</title>
     <link href="bootstrap.css" rel="stylesheet" type="text/css"/>
     <script src="speedy.js" type="text/javascript"></script>
 </head>
