:construction: DOM manipulators

--- a/index.html
+++ b/index.html
@@ -214,4 +214,12 @@
         </div>
     </div>
 </body>
+<script type="text/javascript">
+    _.domLoaded(function () {
+        console.log("DOM Loaded");
+    });
+    _.windowLoaded(function(){
+        console.log("Window Loaded");
+    });
+</script>
 </html>
